<resources>
    <string name="app_name">Food Delivery</string>
    <string name="search">search</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="LAmiSportif">L\' Ami Sportif</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="bottom_sheet_name">hello</string>
    <string name="bottom_sheet_email">email</string>
    <string name="Ma_commande">Ma commande</string>
    <string name="search_hint">Recherche dans Restaurant...</string>
    <string name="mes_commandes">Mes commandes</string>
    <string name="profile">profile</string>
    <string name="card_view_text">Pizza Hut</string>
    <string name="card_view_price">10,00 DH</string>
    <string name="card_view_time">20-25 min</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="fast_food">Fast Food</string>
    <string name="chicken">Chicken</string>
    <string name="healthy">Healthy</string>
    <string name="indian">Indian</string>
    <string name="asian">Asian</string>
    <string name="address_restaurant">Avenue Fal Ould Oumeir, Rabat</string>
    <string name="phone_restaurant">05225-55555</string>
    <string name="hint_email">Your email</string>
    <string name="hint_password">Your password</string>
    <string name="next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="register_here">Email registration</string>
    <string name="hint_r_password">Repeat password</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="error_msg_password">password not valid</string>
    <string name="error_msg_email">not valid email</string>
    <string name="error_msg_r_password">password doesn\'t match</string>
    <string name="facebook_registration">facebook registration</string>
    <string name="category_text">Chicken Meals</string>
    <string name="meal_content">Un sandwich royal + deux strips de poulets + une pièce de pouelt + une salade coleslaw + un petit bol de riz + un jus d\'orange</string>
    <string name="meal_title">Ramadan Iftar Individuel</string>
    <string name="order_quantity">4x</string>
    <string name="order_total">200.00 MAD</string>
    <string name="meal_attributes">Sauce Algérienne</string>

    <string name="error_msg_phone">incorrect format of the phone number</string>
    <string name="name_msg_error">name must be at least 4 characters</string>
    <string name="your_name">Your name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="add_location">add location</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_address">add address</string>
    <string name="dropped_pin">dropped</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_title">Voulez-vous changer de restaurant ?</string>
    <string name="confirm_content">Si vous ajoutez ce repas, vous allez perdre tous les produits dans votre panier, êtes-vous certain(e) ?</string>
    <string name="confirm_exit">Oui, confirmer</string>
    <string name="reject_exit">Non, Mainternir</string>
    <string name="total_sans">Total des repas</string>
    <string name="delviery_price">Prix de livraison</string>
    <string name="total_avec">Total</string>
    <string name="address_details">Adresse</string>
    <string name="address_client">Veuillez ajouter une adresse ! </string>
    <string name="commander">Commander</string>

</resources>
