<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="40dp"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/confirm_title"
        android:layout_marginBottom="80dp"
        android:textColor="@color/colorSoftBlack"
        android:textStyle="bold"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:maxWidth="320dp"
        android:gravity="center"
        android:text="@string/confirm_content"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorSoftBlack"
        android:text="@string/confirm_exit" />
    <android.support.design.button.MaterialButton
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorChipUnselected"
        android:textColor="@color/colorSoftBlack"
        android:text="@string/reject_exit" />


</LinearLayout>