<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.v4.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:id="@+id/close_btn"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pre_cart_card"
                android:visibility="visible">
                <RelativeLayout
                    android:id="@+id/container_details_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_quantity"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/colorSoftBlack"
                        android:id="@+id/order_quantity"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="40dp"
                        android:layout_marginBottom="8dp"
                        >
                        <TextView
                            android:id="@+id/label_plat_"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meal_title"
                            android:textAlignment="center"
                            android:maxWidth="180dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorSoftBlack"
                            />
                        <TextView
                            android:id="@+id/label_attributes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meal_attributes"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:maxWidth="160dp"
                            android:textStyle="italic"
                            android:textColor="@color/colorSoftBlack"
                            android:visibility="gone"
                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/price_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_total"
                        android:textSize="17sp"
                        android:textColor="@color/colorSoftBlack"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_details_details"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">
                    <ImageView
                        android:id="@+id/remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_remove_circle_outline_red"
                        android:layout_alignParentStart="true"
                        android:clickable="true"
                        />
                    <ImageView
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_add_circle_outline_green"
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/confirm_floating_button_drawable"
        app:backgroundTint="@color/floating_button_color"
        app:fabSize="normal"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom|center_horizontal"

         />
</android.support.design.widget.CoordinatorLayout>