<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/container_details"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/category_label"
            android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_text"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/category_field"
                android:textColor="@color/colorSoftBlack"
                />
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/category_hr"
                android:background="@color/colorSoftBlack"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="4dp"
            >
            <ImageView
                android:id="@+id/logo_meal"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@drawable/logo_restaurant"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:id="@+id/layout_desi_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/logo_meal">
                <LinearLayout
                    android:id="@+id/plat_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:orientation="vertical"
                    android:layout_weight="0.8"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meal_title"
                        android:textSize="20sp"
                        android:textColor="@color/colorSoftBlack"
                        android:id="@+id/meal_title"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:id="@+id/label_plat"
                        android:text="@string/meal_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50 MAD"
                    android:layout_gravity="top"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/add_to_my_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle_outline_green"
                android:layout_alignBottom="@id/logo_meal"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/fake_hr"
            android:background="@color/colorChipUnselected"/>
    </LinearLayout>
</RelativeLayout>